@@ -64,6 +64,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Added "opt_lut_ins" pass
     - Added "logger" pass
     - Added "design -delete"
+    - Added "select -unset"
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
